--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,14 @@
-hi
+media:
+  - name: media
+    path: media  # Folder for any images (create it in your repo if needed)
+
+content:
+  - name: digests
+    label: Daily Judgment Digests
+    type: collection
+    path: digests  # Creates a folder for your digests
+    create: true
+    fields:
+      - { name: date, label: Date, type: date, required: true }
+      - { name: title, label: Case Title, type: string, required: true }
+      - { name: body, label: Digest Text, type: text, options: { rows: 20 } }
